--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta
+      name="description"
+      content="SoftSell helps businesses sell software licenses quickly and securely."
+    />
+    <meta
+      name="keywords"
+      content="software sale, sell licenses, Microsoft, Adobe, SoftSell"
+    />
+    <meta name="author" content="SoftSell" />
+    <title>SoftSell - Sell Software Licenses</title>
+    <link rel="icon" href="vite.svg" />
   </head>
   <body>
     <div id="root"></div>
